# grpc_tensorflow

./: Cargo.toml  README.md  build.rs
pb/: attr_value.proto  classification.proto  example.proto  function.proto  graph.proto  input.proto  meta_graph.proto  node_def.proto  op_def.proto  predict.proto  regression.proto  saved_object_graph.proto  struct.proto  tensor.proto  types.proto
src/: lib.rs  main.rs
tensorflow/: tensorflow.rs  tensorflow.serving.rs  tensorflow_serving.rs
