[package]
name = "grpc_tensorflow"
version = "0.1.0"
authors = ["Venkata Ramana <arjunchitturi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
name = "tensorflowlib"
path = "tensorflow/tensorflow_serving.rs"

[dependencies]
tonic = "0.4.2"
prost = "0.7.0"
#tokio = "0.3.4"
tokio = { version = "1.5.0", features = ["full"] }
protobuf = "2.22.1"
prost-types = "0.7.0"
rand = "0.8.3"

[build-dependencies]
tonic-build = "0.4.2"
