[package]
name = "grpc_tensorflow"
version = "0.2.0"
edition = "2024"

[lib]
name = "tensorflowlib"
path = "tensorflow/tensorflow_serving.rs"

[dependencies]
prost = "0.13.5"
prost-types = "0.13.5"
protobuf = "3.7.1"
rand = "0.9.0"
rand_distr = "0.5.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
